# Aegis

./: .dockerignore  .env.example  .gitignore  DEMO.md  Dockerfile  LICENSE  README.md  aegis_local.db  alembic.ini  app.py  docker-entrypoint.sh  langgraph.json  main.py  pipeline_utils.py  pyproject.toml  render.yaml  requirements-render.txt  requirements.txt  start.sh  train_all.py
PlatformIO/fetal_monitor/: platformio.ini
PlatformIO/vest/: WIRING.md  platformio.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_timescale_init.py  002_add_app_tables.py
assets/: desktop.ini
frontend/: .env.example  Human.jsx  middleware.ts  package-lock.json  package.json  typescript_errors.txt
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/public/: manifest.json
mobile/aegis/: README.md  pubspec.yaml
models/: README.md  __init__.py  registry.py
models/Experiments/: 12_Foetal_Health_Analyser.ipynb  17_Skin_Disease_Detector.ipynb  20_ECG_Biometric_Identity.ipynb  5_Stress_ANS_Classifier.ipynb  6_Lung_Sound_Analyser.ipynb  9_Parkinson_Screener.ipynb
models/bowel_motility/: README.md  export_runtime.py  main.py
models/cardiac_age/: README.md  export_runtime.py
models/ecg_arrhythmia/: README.md  export_runtime.py
models/ecg_biometric/: README.md
models/fetal_health/: README.md  export_runtime.py
models/lung_sound/: README.md  export_runtime.py
models/parkinson_screener/: README.md  app.py  export_runtime.py  main.py
models/preterm_labour/: README.md  (+1 more)
scripts/: deploy-hf.sh  train_synthetic_baselines.py
(+384 files in other folders)
