[project]
name = "x-new-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.5",
    "fastapi>=0.135.1",
    "groq>=0.37.1",
    "langchain>=1.2.12",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.2.19",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langgraph>=1.1.2",
    "langgraph-cli[inmem]>=0.4.18",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
    "tenacity>=9.1.4",
]
